# ledger-app-kadena

./: CHANGELOG.md  Cargo.nix  LICENSE.md  README.md  crate-hashes.json  default.nix  guide.md  release.nix  speculos-wrapper  tarball-default.nix
.cargo/: config
dep/alamgu/: github.json
dep/ledger-platform/: github.json
docs/: apdu.md
rust-app/: Cargo.toml  build.rs  mkTarball.sh
rust-app/bin-src/: main.rs  main_nanos.rs
rust-app/src/: crypto_helpers.rs  implementation.rs  interface.rs  lib.rs  main_nanos.rs  settings.rs  ui.rs
rust-app/tests/: integration.rs  ts-tests.rs
rust-app/ts-tests/: basic_tests.ts  package-lock.json  package.json
ts-tests/: basic_tests.ts  marmalade-tx.json  node-packages.nix  override.nix  package-lock.json  package.json
