[package]
name = "kadena"
version = "0.2.0"
authors = ["yhql"]
edition = "2018"
autobins = false

[dependencies]
ledger-parser-combinators = {  git = "https://github.com/obsidiansystems/ledger-parser-combinators", branch = "jg-fix-more-excessive-memory-use" }
# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable speculos logging and change log level.
ledger-log = { git = "https://github.com/obsidiansystems/ledger-platform", branch="jg-add-rust-libs", features=["log_trace"] }
arrayvec = { version = "0.7.2", default-features = false }

[features]
default = [ ]
speculos = [ "nanos_sdk/speculos", "ledger-log/speculos", "ledger-log/log_error" ]
extra_debug = ["ledger-log/log_trace"]

[target.thumbv6m-none-eabi.dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" } 
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" } 

[target.thumbv6m-none-eabi.dev-dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git", features= [ "speculos" ] }

[dev-dependencies]
testmacro = { git = "https://github.com/yhql/testmacro"}

[[bin]]
name = "kadena"
test = false
path = "bin-src/main.rs"

[patch."https://github.com/LedgerHQ/ledger-nanos-sdk.git".nanos_sdk]
git = "https://github.com/obsidiansystems/ledger-nanos-sdk.git"
branch = "use-ambient-compiler-and-target"

[profile.dev]
# panic = "abort"
lto = true

[profile.release]
# panic = "abort"
opt-level = 'z' 
lto = true

[profile.test]


[package.metadata.nanos]
name = "Kadena"
path = "44'/626'"
curve = "ed25519"
flags = "0"
icon = "kadena.gif"
