[package]
name = "kadena"
version = "0.2.1"
authors = ["jonored", "yhql"]
edition = "2018"
autobins = false

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
base64 = { version = "0.13.0", default-features = false }
ledger-parser-combinators = { git = "https://github.com/obsidiansystems/ledger-parser-combinators" }
ledger-log = { git = "https://github.com/Alamgu/ledger-log" }

# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable
# speculos logging and change log level.
[features]
default = [ ]
# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable speculos logging and change log level.
speculos = [ "nanos_sdk/speculos", "ledger-log/speculos", "ledger-log/log_error", "ledger-parser-combinators/logging" ]
extra_debug = ["ledger-log/log_trace"]

[target.thumbv6m-none-eabi.dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" } 
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" } 
ledger-prompts-ui = { git = "https://github.com/Alamgu/ledger-prompts-ui", branch = "dn-three-rows-scroller" }

[target.thumbv6m-none-eabi.dev-dependencies.nanos_sdk]
git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git"
features = [ "speculos" ]

[dev-dependencies]
testmacro = { git = "https://github.com/yhql/testmacro" }

[[bin]]
name = "kadena"
test = false
path = "bin-src/main.rs"

[patch."https://github.com/LedgerHQ/ledger-nanos-sdk.git".nanos_sdk]
git = "https://github.com/obsidiansystems/ledger-nanos-sdk.git"
branch = "ambient-compiler-unified-build"

[package.metadata.nanos]
name = "Kadena"
path = "44'/626'"
curve = "ed25519"
flags = "0"
icon = "kadena.gif"
